--- a/index.html
+++ b/index.html
@@ -428,50 +428,102 @@
     </div><!--END OF .MENU-FIX-->
 
     <div class="menu-side hidden-lg hidden-md hidden-sm" id="menu-side">
-      <ul class="global">
-        <li class="heading-menu-side">
-           <form>
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search...">
-                <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit">
-                    <i class="fa fa-search"></i>
-                  </button>
-                </div>
+      <div class="heading-menu-side">
+          <form>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search...">
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit">
+                  <i class="fa fa-search"></i>
+                </button>
               </div>
-            </form> 
-            <ul>
+            </div>
+          </form> 
+          <div class="menu-account">
+            <a href="#">
+              <i class="fa fa-user" aria-hidden="true"></i> ACCOUNT
+            </a>
+          </div>
+          <div class="menu-user">
+            <a data-toggle="collapse" href="#dropdown-user">
+              <i class="fa fa-user" aria-hidden="true"></i> JOKO
+            </a>
+            <ul class="dropdown-custom collapse" id="dropdown-user">
               <li>
                 <a href="#">
-                  <i class="fa fa-user"></i> ACCOUNT
+                  <i class="fa fa-user" aria-hidden="true"></i> My Account
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="fa fa-user"></i> JOKO
+                  <i class="fa fa-cogs" aria-hidden="true"></i> Account Setting
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fa fa-sign-out" aria-hidden="true"></i> Log Out
                 </a>
               </li>
             </ul>
-        </li>
-        <li class="list-global">
-          <a href="#">HOME</a>
-        </li>
-        <li class="list-global">
-          <a href="#">FASHION</a>
-        </li>
-        <li class="list-global">
-          <a href="#">ELECTRONIC</a>
-        </li>
-        <li class="list-global">
-          <a href="#">VOUCHER</a>
-        </li>
-        <li class="list-global">
-          <a href="#">ABOUT</a>
-        </li>
-        <li class="list-global">
-          <a href="#">CONTACT</a>
-        </li>
-      </ul>
+          </div>
+      </div>
+       <div class="panel-group">
+         <div class="panel panel-default">
+          <div class="panel-heading">
+            <a href="#">HOME</a>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <a data-toggle="collapse" href="#dropdown-fashion">FASHION</a>
+          </div>
+          <div id="dropdown-fashion" class="panel-collapse collapse dropdown-custom">
+            <ul>
+              <li>
+                <a href="#">
+                  <i class="fa fa-female" aria-hidden="true"></i> Women
+                </a>
+                <ul class="dropdown-custom-2">
+                  <li>
+                    <a href="#">Bluss</a>
+                  </li>
+                  <li>
+                    <a href="#">Dress</a>
+                  </li>
+                  <li>
+                    <a href="#">Kemeja</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fa fa-male" aria-hidden="true"></i> Men
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <a href="#">ELECTRONIC</a>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <a href="#">VOUCHER</a>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <a href="#">ABOUT</a>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <a href="#">CONTACT</a>
+          </div>
+        </div>
+      </div> 
     </div>
 
     <div class="banner-slider" id="banner-slider">
