--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                   </a>
                   <ul class="dropdown-custom-2">
                     <li>
-                      <a href="#">Bluss</a>
+                      <a href="#">Paket Data</a>
                     </li>
                     <li>
                       <a href="#">Dress</a>
