--- a/index.html
+++ b/index.html
@@ -419,6 +419,17 @@
                       <a href="#">
                         <i class="fa fa-male" aria-hidden="true"></i> Men
                       </a>
+                      <ul class="dropdown-custom-2">
+                        <li>
+                          <a href="#">Bluss</a>
+                        </li>
+                        <li>
+                          <a href="#">Dress</a>
+                        </li>
+                        <li>
+                          <a href="#">Kemeja</a>
+                        </li>
+                      </ul>
                     </li>
                 </ul><!--END OF .DROPDOWN-CUSTOM-->
               </li>
