--- a/list-product.html
+++ b/list-product.html
@@ -533,75 +533,7 @@
     <div class="list-product">
         <div class="wr-list-product container">
            <div class="row">
-               <div class="left col-md-3 col-sm-3">
-                   <div class="best-product">
-                       <div class="heading-best-product">
-                           <h3>BEST PRODUCTS</h3>
-                       </div>
-                       <div class="body-best-product">
-                           <div class="row">
-                               <div class="gambar col-md-5 col-sm-5">
-                                   <div class="wr-gambar">
-                                       <img src="images/icon-shop1.jpeg" class="img-responsive">
-                                   </div>
-                               </div>
-                               <div class="detail col-md-7 col-sm-7">
-                                   <p>Sample Product</p>
-                                   <div class="potongan">
-                                        <p class="price-text-color sebelum">Rp.170.000</p>
-                                        <p class="price-text-color">Rp.100.000</p>
-                                   </div>
-                               </div>
-                           </div>
-                           <div class="row">
-                               <div class="gambar col-md-5 col-sm-5">
-                                   <div class="wr-gambar">
-                                       <img src="images/icon-shop2.jpeg" class="img-responsive">
-                                   </div>
-                               </div>
-                               <div class="detail col-md-7 col-sm-7">
-                                   <p>Sample Product</p>
-                                   <div class="potongan">
-                                        <p class="price-text-color sebelum">Rp.170.000</p>
-                                        <p class="price-text-color">Rp.100.000</p>
-                                   </div>
-                               </div>
-                           </div>
-                           <div class="row">
-                               <div class="gambar col-md-5 col-sm-5">
-                                   <div class="wr-gambar">
-                                       <img src="images/icon-shop1.jpeg" class="img-responsive">
-                                   </div>
-                               </div>
-                               <div class="detail col-md-7 col-sm-7">
-                                   <p>Sample Product</p>
-                                   <div class="potongan">
-                                        <p class="price-text-color sebelum">Rp.170.000</p>
-                                        <p class="price-text-color">Rp.100.000</p>
-                                   </div>
-                               </div>
-                           </div>
-                       </div>
-                   </div>
-                   <div class="tags">
-                       <div class="heading-tags">
-                          <h3>TAGS</h3>
-                       </div>
-                       <div class="body-tags">
-                          <ul>
-                              <li><a href="#">VOUCHER</a></li>
-                              <li><a href="#">FASHION</a></li>
-                              <li><a href="#">TECHNOLOGY</a></li>
-                              <li><a href="#">DENIM</a></li>
-                              <li><a href="#">BAG</a></li>
-                              <li><a href="#">GLASSES</a></li>
-                              <li><a href="#">MEN</a></li>
-                              <li><a href="#">WOMEN</a></li>
-                          </ul>
-                      </div>
-                   </div><!--END OF .TAGS-->
-               </div>
-               <div class="right col-md-9 col-sm-9">
+               <div class="right col-md-9 col-sm-9 pull-right">
                    <div class="dropdown shorting">
                         <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
                             SHORT BY <span class="caret"></span>
@@ -781,10 +713,78 @@
                         </div>
                         <div class="clearfix"></div>
                   </div><!--END OF .LIST-ITEM-->
-               </div>
-           </div>
-        </div>
-    </div>
+               </div><!--END OF .RIGHT-->
+               <div class="left col-md-3 col-sm-3 pull-left">
+                   <div class="best-product">
+                       <div class="heading-best-product">
+                           <h3>BEST PRODUCTS</h3>
+                       </div>
+                       <div class="body-best-product">
+                           <div class="row">
+                               <div class="gambar col-md-5 col-sm-5">
+                                   <div class="wr-gambar">
+                                       <img src="images/icon-shop1.jpeg" class="img-responsive">
+                                   </div>
+                               </div>
+                               <div class="detail col-md-7 col-sm-7">
+                                   <a href="#">Sample Product</a>
+                                   <div class="potongan">
+                                        <p class="price-text-color sebelum">Rp.170.000</p>
+                                        <p class="price-text-color">Rp.100.000</p>
+                                   </div>
+                               </div>
+                           </div>
+                           <div class="row">
+                               <div class="gambar col-md-5 col-sm-5">
+                                   <div class="wr-gambar">
+                                       <img src="images/icon-shop2.jpeg" class="img-responsive">
+                                   </div>
+                               </div>
+                               <div class="detail col-md-7 col-sm-7">
+                                   <a href="#">Sample Product</a>
+                                   <div class="potongan">
+                                        <p class="price-text-color sebelum">Rp.170.000</p>
+                                        <p class="price-text-color">Rp.100.000</p>
+                                   </div>
+                               </div>
+                           </div>
+                           <div class="row">
+                               <div class="gambar col-md-5 col-sm-5">
+                                   <div class="wr-gambar">
+                                       <img src="images/icon-shop1.jpeg" class="img-responsive">
+                                   </div>
+                               </div>
+                               <div class="detail col-md-7 col-sm-7">
+                                   <a href="#">Sample Product</a>
+                                   <div class="potongan">
+                                        <p class="price-text-color sebelum">Rp.170.000</p>
+                                        <p class="price-text-color">Rp.100.000</p>
+                                   </div>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="tags">
+                       <div class="heading-tags">
+                          <h3>TAGS</h3>
+                       </div>
+                       <div class="body-tags">
+                          <ul>
+                              <li><a href="#">VOUCHER</a></li>
+                              <li><a href="#">FASHION</a></li>
+                              <li><a href="#">TECHNOLOGY</a></li>
+                              <li><a href="#">DENIM</a></li>
+                              <li><a href="#">BAG</a></li>
+                              <li><a href="#">GLASSES</a></li>
+                              <li><a href="#">MEN</a></li>
+                              <li><a href="#">WOMEN</a></li>
+                          </ul>
+                      </div>
+                   </div><!--END OF .TAGS-->
+               </div><!--END OF .LEFT-->
+           </div><!--END OF .ROW-->
+        </div><!--END OF .WR-LIST-PRODUCT-->
+    </div><!--END OF .LIST-PRODUCT-->
 
 
     <div class="footer">
