nambah page checkout

--- a/checkout.html
+++ b/checkout.html
@@ -532,7 +532,7 @@
                <div class="right col-md-6 col-sm-6 pull-right">
                    <div class="panel panel-default cart">
                      <div class="panel-heading panel-heading-custom">
-                        <h3 class="panel-title"> REVIEW ORDER
+                        <h3 class="panel-title capslock"> REVIEW ORDER
                              <a href="#" class="capital pull-right">
                                 <i class="fa fa-pencil-square-o" aria-hidden="true"></i> edit cart
                             </a>
@@ -616,7 +616,109 @@
                    </div><!--END OF .PANEL-->
                </div><!--END OF .RIGHT-->
                <div class="left col-md-6 col-sm-6 pull-left">
-                   
+                   <div class="panel panel-default shipping">
+                      <div class="panel-heading panel-heading-custom">
+                        <h3 class="panel-title capslock">shipping address</h3>
+                      </div><!--END OF .PANEL-HEADING-->
+                      <div class="panel-body">
+                        <form>
+                          <table>
+                            <tr>
+                              <td>
+                                <p class="capital">First Name:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                              <td>
+                                <p class="capital">Laste Name:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td colspan="2">
+                                <p class="capital">address:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td colspan="2">
+                                <p class="capital">city:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td colspan="2">
+                                <p class="capital">country:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td colspan="2">
+                                <p class="capital">post code:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td colspan="2">
+                                <p class="capital">phone number:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td colspan="2">
+                                <p class="capital">email address:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                            </tr>
+                          </table>
+                        </form>
+                      </div><!--END OF .PANEL-BODY-->
+                  </div><!--END OF .PANEL-->
+
+                  <div class="panel panel-default payment">
+                      <div class="panel-heading panel-heading-custom">
+                        <h3 class="panel-title capslock">scure payment</h3>
+                      </div><!--END OF .PANEL-HEADING-->
+                      <div class="panel-body">
+                        <form>
+                          <table>
+                            <tr>
+                              <td colspan="2">
+                                <p class="capital">card type:</p>
+                                <select class="form-control">
+                                  <option>
+                                    <p>None</p>
+                                  </option>
+                                  <option>
+                                    <p>Visa</p>
+                                  </option>
+                                  <option>
+                                    <p class="caiptal">Master Card</p>
+                                  </option>
+                                </select>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td colspan="2">
+                                <p class="capital">credit card number:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td colspan="2">
+                                <p class="capital">card CVV:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                            </tr>
+                            <tr>
+                              <td colspan="2">
+                                <p class="capital">expiration date:</p>
+                                <input type="text" class="form-control input-md">
+                              </td>
+                            </tr>
+                          </table>
+                        </form>
+                      </div><!--END OF .PANEL-BODY-->
+                  </div><!--END OF .PANEL-->
                </div><!--END OF .LEFT-->
            </div><!--END OF .ROW-->
         </div><!--END OF .WR-CHECKOUT-->
