nambahin template select

--- a/checkout.html
+++ b/checkout.html
@@ -17,10 +17,16 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
 
+    <!-- page style -->
+    <link rel="stylesheet" href="css/bootstrap-select.css">
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- page js -->
+    <script src="js/bootstrap-select.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -684,15 +690,12 @@
                             <tr>
                               <td colspan="2">
                                 <p class="capital">card type:</p>
-                                <select class="form-control">
-                                  <option>
-                                    <p>None</p>
-                                  </option>
+                                <select class="selectpicker show-tick form-control">
                                   <option>
                                     <p>Visa</p>
                                   </option>
                                   <option>
-                                    <p class="caiptal">Master Card</p>
+                                    <p>Master Card</p>
                                   </option>
                                 </select>
                               </td>
