nambah page konfirmasi

--- a/checkout.html
+++ b/checkout.html
@@ -616,7 +616,7 @@
                                 </div>
                             </div>
                             <div class="bayar col-md-12 col-sm-12 col-xs-12">
-                                <button class="btn btn-block capslock btn-lg">
+                                <button class="btn btn-block capslock btn-md">
                                     <i class="fa fa-money" aria-hidden="true"></i> bayar
                                 </button>
                             </div>
