--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                       </li>
                       <li>
                         <a>
-                            <select class="form-control" id="sel1">
+                            <select class="form-control">
                               <option>
                                 <p>Nominal</p>
                               </option>
@@ -716,7 +716,7 @@
                       </li>
                       <li>
                         <a>
-                            <select class="form-control" id="sel1">
+                            <select class="form-control">
                               <option>
                                 <p>Kuota</p>
                               </option>
@@ -751,7 +751,7 @@
                       </li>
                       <li>
                         <a>
-                            <select class="form-control" id="sel1">
+                            <select class="form-control">
                               <option>
                                 <p>Nominal</p>
                               </option>
