--- a/list-product.html
+++ b/list-product.html
@@ -542,7 +542,7 @@
     <div class="list-product">
         <div class="wr-list-product container">
            <div class="row">
-               <div class="right col-md-9 col-sm-9 pull-right">
+               <div class="right col-md-10 col-sm-10 pull-right">
                    <div class="dropdown shorting">
                         <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
                             SHORT BY <span class="caret"></span>
@@ -554,7 +554,7 @@
                         </ul>
                    </div> 
                    <div class="list-item row">
-                        <div class="col-sm-4 col-md-4">
+                        <div class="col-sm-3 col-md-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="images/product.jpg" class="img-responsive" alt="a" />
@@ -585,7 +585,7 @@
                                 </div><!--END OF .INFO-->
                             </div><!--END OF .COL-ITEM-->
                         </div>
-                        <div class="col-sm-4 col-md-4">
+                        <div class="col-sm-3 col-md-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="images/product.jpg" class="img-responsive" alt="a" />
@@ -612,7 +612,7 @@
                                 </div><!--END OF .INFO-->
                             </div><!--END OF .COL-ITEM-->
                         </div>
-                        <div class="col-sm-4 col-md-4">
+                        <div class="col-sm-3 col-md-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="images/product.jpg" class="img-responsive" alt="a" />
@@ -639,7 +639,7 @@
                                 </div><!--END OF .INFO-->
                             </div><!--END OF .COL-ITEM-->
                         </div>
-                        <div class="col-sm-4 col-md-4">
+                        <div class="col-sm-3 col-md-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="images/product.jpg" class="img-responsive" alt="a" />
@@ -666,7 +666,7 @@
                                 </div><!--END OF .INFO-->
                             </div><!--END OF .COL-ITEM-->
                         </div>
-                        <div class="col-sm-4 col-md-4">
+                        <div class="col-sm-3 col-md-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="images/product.jpg" class="img-responsive" alt="a" />
@@ -693,7 +693,7 @@
                                 </div><!--END OF .INFO-->
                             </div><!--END OF .COL-ITEM-->
                         </div>
-                        <div class="col-sm-4 col-md-4">
+                        <div class="col-sm-3 col-md-3">
                             <div class="col-item">
                                 <div class="photo">
                                     <img src="images/product.jpg" class="img-responsive" alt="a" />
@@ -723,73 +723,74 @@
                         <div class="clearfix"></div>
                   </div><!--END OF .LIST-ITEM-->
                </div><!--END OF .RIGHT-->
-               <div class="left col-md-3 col-sm-3 pull-left">
-                   <div class="best-product">
-                       <div class="heading-best-product">
-                           <h3>BEST PRODUCTS</h3>
+               <div class="left col-md-2 col-sm-2 pull-left">
+                   <div class="search">
+                       <div class="heading-search">
+                           <p class="capital">Cari produk disini</p>
                        </div>
-                       <div class="body-best-product">
-                           <div class="row">
-                               <div class="gambar col-md-5 col-sm-5">
-                                   <div class="wr-gambar">
-                                       <img src="images/icon-shop1.jpeg" class="img-responsive">
-                                   </div>
-                               </div>
-                               <div class="detail col-md-7 col-sm-7">
-                                   <a href="#">Sample Product</a>
-                                   <div class="potongan">
-                                        <p class="price-text-color sebelum">Rp.170.000</p>
-                                        <p class="price-text-color">Rp.100.000</p>
-                                   </div>
-                               </div>
-                           </div>
-                           <div class="row">
-                               <div class="gambar col-md-5 col-sm-5">
-                                   <div class="wr-gambar">
-                                       <img src="images/icon-shop2.jpeg" class="img-responsive">
-                                   </div>
-                               </div>
-                               <div class="detail col-md-7 col-sm-7">
-                                   <a href="#">Sample Product</a>
-                                   <div class="potongan">
-                                        <p class="price-text-color sebelum">Rp.170.000</p>
-                                        <p class="price-text-color">Rp.100.000</p>
-                                   </div>
-                               </div>
-                           </div>
-                           <div class="row">
-                               <div class="gambar col-md-5 col-sm-5">
-                                   <div class="wr-gambar">
-                                       <img src="images/icon-shop1.jpeg" class="img-responsive">
-                                   </div>
-                               </div>
-                               <div class="detail col-md-7 col-sm-7">
-                                   <a href="#">Sample Product</a>
-                                   <div class="potongan">
-                                        <p class="price-text-color sebelum">Rp.170.000</p>
-                                        <p class="price-text-color">Rp.100.000</p>
-                                   </div>
-                               </div>
-                           </div>
+                       <div class="body-search">
+                            <div class="input-group">
+                              <input type="text" class="form-control" placeholder="Search...">
+                              <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit">
+                                  <i class="fa fa-search"></i>
+                                </button>
+                              </div>
+                            </div>
                        </div>
-                   </div>
-                   <div class="tags">
-                       <div class="heading-tags">
-                          <h3>TAGS</h3>
+                   </div><!--END OF .SEARCH-->
+                   <div class="range-harga">
+                       <div class="heading-range">
+                          <p class="capital">rentang harga</p>
                        </div>
-                       <div class="body-tags">
-                          <ul>
-                              <li><a href="#">VOUCHER</a></li>
-                              <li><a href="#">FASHION</a></li>
-                              <li><a href="#">TECHNOLOGY</a></li>
-                              <li><a href="#">DENIM</a></li>
-                              <li><a href="#">BAG</a></li>
-                              <li><a href="#">GLASSES</a></li>
-                              <li><a href="#">MEN</a></li>
-                              <li><a href="#">WOMEN</a></li>
-                          </ul>
+                       <div class="body-range">
+                         <input type="text" class="form-control" placeholder="Min">
+                         <input type="text" class="form-control" placeholder="Max">
+                         <button class="btn capital">Tampilkan</button>
                       </div>
-                   </div><!--END OF .TAGS-->
+                   </div><!--END OF .RANGE-HARGA-->
+                   <div class="pengiriman">
+                     <div class="heading-pengiriman">
+                       <p class="capital">pengiriman</p>
+                     </div>
+                     <div class="body-pengiriman">
+                       <select class="form-control selectpicker show-tick">
+                         <option>
+                           <p class="capital">Pilih</p>
+                         </option>
+                         <option>
+                           <p class="capital">JNE</p>
+                         </option>
+                         <option>
+                           <p class="capital">Tiki</p>
+                         </option>
+                         <option>
+                           <p class="capital">Pos Indonesia</p>
+                         </option>
+                         <option>
+                           <p class="capital">Si Cepat</p>
+                         </option>
+                       </select>
+                     </div>
+                   </div><!--END OF .PENGIRIMAN-->
+                   <div class="produk-pilihan">
+                     <div class="heading-produk-pilihan">
+                       <p class="capital">Pilihan Produk</p>
+                     </div>
+                     <div class="body-produk-pilihan">
+                       <ul class="pilihan">
+                         <li class="list">
+                           <input type="checkbox"> <span class="capital">Preorder</span>
+                         </li>
+                         <li class="list">
+                           <input type="checkbox"> <span class="capital">cashback</span>
+                         </li>
+                         <li class="list">
+                           <input type="checkbox"> <span class="capital">limited</span>
+                         </li>
+                       </ul>
+                     </div>
+                   </div>
                </div><!--END OF .LEFT-->
            </div><!--END OF .ROW-->
         </div><!--END OF .WR-LIST-PRODUCT-->
