--- a/page-cart.html
+++ b/page-cart.html
@@ -802,6 +802,17 @@
             });
         });
 
+        // script untuk nicescroll dropdown-custom cart
+        $(document).ready(function() {  
+            'use strict';
+
+            $(".dropdown-custom").niceScroll({
+                cursorcolor: "#eaeaea",
+                cursorwidth: "8px",
+                cursorborder: "none",
+            });
+        });
+
 
         // SCRIPT SLIDER
       
