--- a/index.html
+++ b/index.html
@@ -1705,6 +1705,17 @@
             });
         });
 
+        // script untuk nicescroll dropdown-custom cart
+        $(document).ready(function() {  
+            'use strict';
+
+            $(".dropdown-custom").niceScroll({
+                cursorcolor: "#eaeaea",
+                cursorwidth: "8px",
+                cursorborder: "none",
+            });
+        });
+
 
         // SCRIPT SLIDER
       
