--- a/list-product.html
+++ b/list-product.html
@@ -1126,6 +1126,16 @@
             });
         });
 
+        // script untuk nicescroll dropdown-custom cart
+        $(document).ready(function() {  
+            'use strict';
+
+            $(".dropdown-custom").niceScroll({
+                cursorcolor: "#eaeaea",
+                cursorwidth: "8px",
+                cursorborder: "none",
+            });
+        });
 
         // SCRIPT SLIDER
       
