--- a/list-product.html
+++ b/list-product.html
@@ -98,7 +98,7 @@
                <button type="button" class="btn btn-default dropdown-toggle dropdown" data-toggle="dropdown">
                   <i class="fa fa-shopping-cart" aria-hidden="true"></i> <span class="badge">2</span>
                </button>
-               <ul class="dropdown-menu dropdown-custom" role="menu">
+               <ul class="dropdown-menu dropdown-cart" role="menu">
                 <li>
                   <div class="list-cart">
                     <div class="left-cart col-md-3 col-sm-3">
@@ -223,7 +223,7 @@
               <button type="button" class="btn btn-default dropdown-toggle dropdown pull-right" data-toggle="dropdown">
                   <i class="fa fa-shopping-cart" aria-hidden="true"></i> <span class="badge">2</span>
               </button>
-              <ul class="dropdown-menu dropdown-custom" role="menu">
+              <ul class="dropdown-menu dropdown-cart" role="menu">
                 <li>
                   <div class="list-cart">
                     <div class="left-cart col-xs-3">
