--- a/page-konfirmasi.html
+++ b/page-konfirmasi.html
@@ -767,7 +767,7 @@
         $(document).ready(function() {  
             'use strict';
 
-            $(".dropdown-custom").niceScroll({
+            $(".dropdown-cart").niceScroll({
                 cursorcolor: "#eaeaea",
                 cursorwidth: "8px",
                 cursorborder: "none",
