--- a/checkout.html
+++ b/checkout.html
@@ -873,7 +873,7 @@
         $(document).ready(function() {  
             'use strict';
 
-            $(".dropdown-custom").niceScroll({
+            $(".dropdown-cart").niceScroll({
                 cursorcolor: "#eaeaea",
                 cursorwidth: "8px",
                 cursorborder: "none",
